# test_streamlit

./: pyproject.toml
brevettiai/io/: utils.py
brevettiai/platform/: __init__.py  platform_credentials.py  web_api.py
brevettiai/platform/datamodel/: __init__.py  dataset.py  web_api_types.py
test_streamlit/: app_v3.py  app_v4.py
